1 New project: a Javascript version of Turtle Blocks
  * basic block manipluation
  * basic block execution
  * expandable blocks working
  * cascading of expandable blocks
  * arithmetic functions (arg parsing)
  * setting expandable blocks on run (should be on load)
  * rotate turtle using easeljs rotation
  * implement actions (stacks)
  * implement boxes
  * booleans
  * slowmo playback
  * only one stack
  * add protoblocks for new boxes
  * add protoblock for new stacks
  * time block
  * mouse x, mouse y blocks
  * add controls for rabbit vs turtle
  * add controls for show/hide
  * add eraser button
  * coordinate grids
  * fix palette updates from block palette
  * penup/down
  * fill
  * load blocks
  * click on block to run
  * arc
  * setxy
  * set heading
  * x, y, heading
  * lots-o-sample projects
  * expanding arithmetic blocks
  * expanding 2-arg blocks
  * implement color model (Munsell)
  * fix Munsell 2.5 tables
  * set background color
  * trash
  * move labels to container
  * fix repeat docking bug
  * fix filler hide bug
  * real block highlighting
  * fix problem with cascading arithmetic operators
  * trigger events on containers, not bitmaps
  * multiple turtles (one for each start block)
  * show text
  * show image
  * different colors for each turtle
  * turtle shell (aka sprites)
  * erase media (remove children)
  * reset turtle skin on clear

TODO:
  * scale text, images, turtle shell
  * center images on turtle
  * fix layering bug
  * fix action name bug
  * save blocks
  * copy/paste
  * user defined blocks
  * better compartmentalization of code
  * sensors
  * decide on a palette strategy
  * implement more sophisticated blocks
  * keyboard short cuts
  * restore from trash